# LightStripAudioSync

./: .clang-format  .gitignore  .gitmodules  AudioCapture.cpp  AudioCapture.hpp  CMakeLists.txt  DataSender.cpp  DataSender.hpp  LICENSE  Packet.hpp  README.md  Visualizer.hpp  build.bat  build.sh  main.cpp
